--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,29 +17,30 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="253dp"
+        android:layout_height="91dp"
         android:layout_below="@id/circle"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
         android:text="PUP Match: Your University Connection Hub"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:layout_marginTop="32dp" />
+        android:textSize="24sp" />
+
+    <!-- Replace with your arrow drawable -->
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="wrap_content"
+        android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif"
         android:padding="16dp"
         android:text="Connect with fellow authorized PUP students and build a vibrant university experience, together."
         android:textColor="#FFFFFF"
         android:textSize="16sp" />
 
-    <!-- Replace with your arrow drawable -->
     <ImageView
         android:id="@+id/arrow"
         android:layout_width="48dp"
