--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,3 +5,11 @@
     <color name="reddish_pink">#ED5858</color>
     <color name="off_white">#FAFAFA</color>
 </resources>
+
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="reddish_pink">#ED5858</color>
+    <color name="off_white">#FAFAFA</color>
+</resources>
